--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,91 @@
-footer {
-    background-color: #3c2313;
-    color: #ffffff;
+div.barraAmarillaFooter {
+    background-color: #f0a83e;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    padding: 0.5rem 0;
 }
 
-h4 {
+.Sobre {
+    background-image: url(../img/iconocarta.svg);
+    background-repeat: no-repeat;
+    background-position: left center;
+    width: 60px;
+    height: 25px;
+}
 
+div.izqBarraAmarillaFooter {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-left: 1rem;
+}
+
+div.izqBarraAmarillaFooter span {
+    color: white;
     font-size: 20px;
+    font-weight: bold;
+}
+
+div.derBarraAmarillaFooter {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-right: 1rem;
+}
+
+div.derBarraAmarillaFooter input {
+    font-size: 9px;
+    color: #A0A0A0;
+    width: 250px;
+    border: 2px solid white;
+    border-radius: 25px;
+}
+
+div.derBarraAmarillaFooter button {
+    font-size: 9px;
+    color: white;
+    background-color: #3C2313;
+    width: 70px;
+    border: 2px solid #3C2313;
+    border-radius: 25px;
+}
+
+div.barraCafeFooter {
+    background-color: #3c2313;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 3rem;
+}
+
+div.barraCafeFooter h4 {
+    font-size: 25px;
+}
+
+div.barraCafeFooterIzq {
+    display: flex;
+    flex-direction: column;
+}
+
+div.barraCafeFooterIzq section {
+    display: flex;
+    padding: 1.5rem;
+   }
+
+div.barraCafeFooterDer {
+    display: flex;
+}
+
+div.texto{
+    padding-left: 2rem;
 }
 
 div.barraNegraFooter {
-    background-color: #f0a83e;
-    color: black;
+    background-color: black;
+    color: white;
     text-align: center;
+
 }
