--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,131 @@
-
-h1 {
-    font-size: 40px;
+section.imagenPrincipal {
+    background-image: url(../img/bowl.png);
+    background-repeat:no-repeat;
+    background-size:cover;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 20px;
+    height: 30rem;
+    min-height: 40vh;
+    max-height: 60vh;
 }
 
-h3 {
+div.textoLogo {
+    margin-right: 4rem;
     text-align: center;
+}
+
+div.textoLogo h2 {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 span.comederos {
     background-color: #f0a83e;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    top: 15px;
 }
 
-div.descripcion {
+article.productosDestacados {
     text-align: center;
 }
 
-div.producto {
-    background-color: #fbfaf6;
+
+article.productosDestacados h1 {
+    font-size: 40px;
+    padding: 20px;
+}
+
+article.productosDestacados span {
+    font-size: 18px;
+    color: #666666;
+    padding-bottom: 50px;
+    position: relative;
+    display: block;
+}
+
+section.productos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+
+article.contenido {
+    background-color: #FBFAF6;
+    width: 265px;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+div.productoAbajo {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 p.especial {
     color: #f0a83e;
+    font-weight: 400;
+}
+
+section.formulario {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 0;
+}
+
+form.form1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+form.form1 h3 {
+    font-size: 25px;
+    margin: 1.5rem;
+}
+
+
+form.form1 input {
+    margin: 0.3rem 0;
+    padding: 0.5rem 1rem;
+    width: 15rem;
+    background-color: #3C2313;
+    color: #FFFFFF;
+    border-radius: 25px;
+}
+
+div.botones {
+    margin-top: 2rem;
+}
+
+div.botones button {
+    color: #FFFFFF;
+    width: 90px;
+    border-radius: 15px;
+    padding: 0.25rem;
+}
+
+
+button.resetear {
+    background-color: #8A8787;
+    border: 2px solid #8A8787;
+
+}
+
+button.enviar {
+    background-color: #F0A83E;
+    border: 2px solid #F0A83E;
+
 }
