--- a/css/variable.css
+++ b/css/variable.css
@@ -1,17 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
-    max-width: 1200px;
-    font-family: "Roboto", sans-serif;
+    font-family: Roboto, sans-serif;
+    margin: 0;
 }
 
 
-section {
-    background-image: url(../img/bowl.png);
-    height: 700px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    text-align: center;
-}
+
+
+
 
 
